# otus_lab3

./: CMakeLists.txt  cyclefifo.h  main.cpp
.github/workflows/: release.yml
